<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello Maven</string>
    <string name="hello">Hello TheIntentService!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="err_server">Server Error</string>
    <string name="temp_label">Temperature</string>
    <string name="loading_txt">Loading...</string>
    <string name="humidity_label">Humidity</string>
    <string name="error_value">Error</string>
    <string name="weather_label">Current weather</string>

</resources>