<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/weather_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_label" />
    <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/temp_label"
            android:id="@+id/temp_label" android:layout_alignLeft="@+id/weather_label"
            android:layout_alignParentTop="true" android:layout_marginTop="57dp"/>
    <TextView
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:text="@string/loading_txt"
            android:id="@+id/temp"
            android:layout_toRightOf="@+id/temp_label" android:layout_alignTop="@+id/temp_label"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label"
            android:id="@+id/humidity_label" android:layout_alignLeft="@+id/weather_label"
            android:layout_below="@+id/temp_label"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_txt"
            android:id="@+id/humidity" android:layout_toRightOf="@+id/temp_label"
            android:layout_below="@+id/temp_label"/>
    <TextView
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/error_value"
            android:id="@+id/error_txt" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
            android:layout_marginTop="144dp"/>

</RelativeLayout>